compiler/tools/fpp-syntax/test/template.ref.txt
fpp-syntax
[ local path prefix ]/compiler/tools/fpp-syntax/test/template.fpp:6.10
expand T(10)
         ^
error: ) expected
